0.23.1	UNRELEASED

 * Return symrefs from ls_refs. (Jelmer Vernooĳ, #863)

 * Support short commit hashes in ``porcelain.reset()``.
   (Jelmer Vernooĳ, #1154)

 * Support dumb repository access.
   (Jelmer Vernooĳ, #1097)

 * Fix TypeError when cloning repositories with bytes paths on Windows.
   (Jelmer Vernooĳ, #973)

 * Support ``depth`` for local clones.
   (Jelmer Vernooĳ)

 * Add basic support for managing Notes. (Jelmer Vernooĳ)

 * Add basic ``cherry-pick`` subcommand.  (#1599, Jelmer Vernooĳ)

 * Add ``revert`` command to ``dulwich.porcelain`` and CLI.
   (#1599, Jelmer Vernooĳ)

 * Add annotate support as well as ``annotate`` and ``blame``
   commands.  (#245, Jelmer Vernooĳ)

 * Fix ``apply_delta`` to raise ``ApplyDeltaError`` instead of ``AssertionError``
   when the source buffer size doesn't match the delta header. This issue only
   affected the pure Python implementation when the Rust extension was not
   available. The Rust implementation already raised the correct exception.
   (#1606, Jelmer Vernooĳ)

 * Fix ``porcelain.reset --hard`` to properly delete files that don't exist in
   the target tree. Previously, when resetting to a remote branch, files deleted
   in the remote were not removed locally due to incorrect path normalization
   on Windows. (#840, Jelmer Vernooĳ)

 * Add support for includes in configuration files.
   (#1216, Jelmer Vernooĳ)

0.23.0	2025-06-21

 * Add basic ``rebase`` subcommand. (Jelmer Vernooĳ)

 * Add ``gc`` command to ``dulwich.porcelain.`` (Jelmer Vernooĳ, #92)

 * Add ``unpack-objects`` plumbing command to unpack objects from pack files
   into loose objects in the repository. This command extracts all objects
   from a pack file and writes them to the object store as individual files.
   Available in both ``dulwich.porcelain.unpack_objects()`` and as a CLI
   command ``dulwich unpack-objects``. (Jelmer Vernooĳ)

 * Add ``merge-tree`` plumbing command to ``dulwich.porcelain`` and CLI.